# gnoblin

./: .clang-format  .gitignore  .gitmodules  COPYING  Justfile  README.md  TODO.md
docs/: README.md  code-sweep-2026-06.md  configuration.md  devkit.md  installation.md  real-hardware-verification.md  testing.md
packaging/arch/: README.md
packaging/deb/: README.md
packaging/rpm/: gnome-shell.spec  mutter.spec
scripts/: apply-patches.sh  capture-devkit.sh  copy-overlay.sh  design-review.sh  devkit-compare-topbar.sh  devkit-document-portal-stub.py  devkit-harness.py  devkit_crash_detector.py  devkit_dbus.py  gen-gnoblin-protocols-patch.sh  gnoblin-state.sh  gnoblin-test-lib.sh  install-session.sh  install-userspace.sh  layer-shell-probe.c  list-tarball-sources.sh  make-tarball.sh  register-session.sh  run-devkit.sh  run-gnome-devkit.sh  run-gnome-shell.sh  stage-rpm-sources.sh  stringify-file.py  subproject-state.sh  test-build.sh  test-config.sh  test-gnome-dbus.sh  test-gnome-devkit.sh  test-hot-reload.sh  test-log-diagnostics.sh  test-logic.sh  test-nested.sh  test-notifications-toggle.sh  test-portal-access-policy.py  test-protocol-boundaries.sh  test-protocol-gating.sh  test-rpm-sources.sh  test-scripting.sh  test-secure-state.sh  test-shell-security-policy.py  (+2 more)
src/: README.md
src/clients/: Cargo.toml  README.md
src/clients/control-center/: cc-gnoblin-panel.blp  cc-gnoblin-panel.c  cc-gnoblin-panel.h  gnome-gnoblin-panel.desktop.in  manifest  meson.build
src/clients/control-center/icons/: meson.build
src/clients/crates/gnoblin-core/: Cargo.toml
src/clients/crates/gnoblin-core/src/: config.rs  lib.rs  nightlight.rs  test_support.rs  xdg.rs
src/clients/crates/gnoblin-desktop/: Cargo.toml
src/clients/crates/gnoblin-desktop/src/: desktop_entry.rs  icons.rs  lib.rs  tray.rs
src/clients/crates/gnoblin-runtime/: Cargo.toml
src/clients/crates/gnoblin-runtime/src/: app_context_menu.rs  layer_shell_runtime.rs  lib.rs  notifcenter.rs  prefs.rs  shell.rs  theme.rs
src/clients/dock/: Cargo.toml  build.rs
src/clients/dock/src/: main.rs
src/clients/dock/ui/: dock.slint
src/clients/launcher/: Cargo.toml  build.rs
src/clients/launcher/src/: desktop.rs  main.rs  provider.rs  results.rs
src/clients/launcher/ui/: launcher.slint
src/clients/night-light/: Cargo.toml
src/clients/night-light/src/: main.rs
src/clients/notifyd/: Cargo.toml  build.rs
src/clients/notifyd/src/: main.rs
src/clients/notifyd/ui/: notifications.slint
src/clients/osd/: Cargo.toml  build.rs
src/clients/osd/src/: main.rs
src/clients/osd/ui/: osd.slint
src/clients/power-menu/: Cargo.toml  build.rs
src/clients/power-menu/src/: main.rs
src/clients/power-menu/ui/: power-menu.slint
src/clients/shell-ui/: Cargo.toml  README.md
src/clients/shell-ui/src/: app_context_menu.rs  appmenu.rs  args.rs  config.rs  datetime.rs  desktop_entry.rs  dnd.rs  icons.rs  layer_shell_runtime.rs  lib.rs  nightlight.rs  notifcenter.rs  prefs.rs  qsplugin.rs  quicksettings.rs  shell.rs  test_support.rs  theme.rs  tray.rs  xdg.rs
src/clients/topbar/: Cargo.toml  build.rs
src/clients/topbar/src/: main.rs  notifications.rs  qsplugin.rs  quick_settings.rs  settings.rs
src/clients/topbar/ui/: topbar.slint
src/clients/wallpaper/: Cargo.toml
src/clients/wallpaper/src/: main.rs
src/clients/window-menu/: Cargo.toml  build.rs
src/clients/window-menu/src/: main.rs
src/clients/window-menu/ui/: window-menu.slint
src/compositor/: README.md  gnoblin-actions-spec.c  gnoblin-actions-spec.h  gnoblin-actions.cpp  gnoblin-actions.h  gnoblin-anim-spec.c  gnoblin-anim-spec.h  gnoblin-anim.cpp  gnoblin-anim.h  gnoblin-blur.cpp  gnoblin-blur.h  gnoblin-color-spec.c  gnoblin-color-spec.h  gnoblin-control.cpp  gnoblin-control.h  gnoblin-gestures.cpp  gnoblin-gestures.h  gnoblin-input-spec.c  gnoblin-input-spec.h  gnoblin-input.cpp  gnoblin-input.h  gnoblin-lock.cpp  gnoblin-lock.h  gnoblin-output-spec.c  gnoblin-output-spec.h  gnoblin-output.cpp  gnoblin-output.h  gnoblin-overview.cpp  gnoblin-overview.h  gnoblin-roles.cpp  gnoblin-roles.h  gnoblin-rounded.cpp  gnoblin-rounded.h  gnoblin-rules-spec.c  gnoblin-rules-spec.h  gnoblin-rules.cpp  gnoblin-rules.h  gnoblin-shadow-spec.c  gnoblin-shadow-spec.h  gnoblin-shadow.cpp  (+9 more)
src/config/: README.md  gnoblin-config.c  gnoblin-config.h  manifest
src/control-center/: manifest
src/control-center/panels/gnoblin/: cc-gnoblin-panel.c  cc-gnoblin-panel.h  cc-gnoblin-panel.ui  gnoblin.gresource.xml  gnome-gnoblin-panel.desktop.in  meson.build
src/data/: README.md  gnoblin.conf.example  gnoblin.defaults.conf  manifest  org.gnoblin.shell.gschema.xml
src/gnome-shell-overlay/: manifest
src/protocols/: README.md
src/tools/: gnoblin-env.sh  gnoblin-session  gnoblin-shell-service  gnoblinctl
tests/: actions-parser-test.c  anim-parser-test.c  color-parser-test.c  config-example-test.c  config-test.c  input-parser-test.c  lock-pam-accept-test.c  lock-pam-test.c  output-parser-test.c  protocol-boundary-client.c  rules-parser-test.c  sdf-test.c  shadow-parser-test.c
tests/layer-shell/: README.md  autostart-output-removal-test.py  autostart-retry-test.py  background-layer-input-test.py  blur-alpha-threshold-test.py  blur-test.py  chrome-blur-test.py  content-behind-blur-test.py  devkit-dbus-test.py  dock-launch-test.py  dock-live-favorites-test.py  dock-menu-input-region-test.py  effects-rules-visual.py  effects-shadow-test.py  explicit-command-reap-test.py  firefox-launch-test.py  foreign-toplevel-probe.c  foreign-toplevel-test.py  frame-callback-crash.c  fullscreen-cover-test.py  gestures-test.py  grid-test.py  input-config-test.py  kde-appmenu-backend-test.py  kde-appmenu-probe.c  keybind-launcher-test.py  launcher-activates-app-test.py  layer-keyboard-focus-client.c  layer-keyboard-focus-test.py  layer-move-focus-client.c  layer-move-focus-test.py  lock-engage-test.py  maximize-animation-test.py  maximize-effects-test.py  maximize-strut-test.py  multimonitor-test.py  night-light-hotplug-test.py  notification-center-input-test.py  notifications-test.py  (+91 more)
(+127 files in other folders)
