# Workspace for the gnoblin Rust shell clients. Shared crates live under
# crates/ and role binaries stay in one workspace target dir for faster rebuilds.
[workspace]
resolver = "2"
members = [
  "crates/gnoblin-core",
  "crates/gnoblin-desktop",
  "crates/gnoblin-runtime",
  "topbar",
  "dock",
  "window-menu",
  "wallpaper",
  "osd",
  "notifyd",
  "launcher",
  "night-light",
  "power-menu",
]
exclude = ["control-center"]
