# Workspace for the gnoblin Rust shell clients. Shared crates live under
# crates/ and role binaries stay in one workspace target dir for faster rebuilds.
[workspace]
resolver = "2"
members = [
  "crates/gnoblin-core",
  "crates/gnoblin-desktop",
  "crates/gnoblin-runtime",
  "bin/topbar",
  "bin/dock",
  "bin/window-menu",
  "bin/wallpaper",
  "bin/osd",
  "bin/notifyd",
  "bin/launcher",
  "bin/night-light",
  "bin/power-menu",
]
