[package]
name = "gnoblin-dock"
version = "0.1.0"
edition = "2021"
description = "gnoblin dock — a Slint wlr-layer-shell client (pinned + running apps)"

[[bin]]
name = "gnoblin-dock"
path = "src/main.rs"

[dependencies]
gnoblin-shell-ui = { path = "../shell-ui" }
slint = { version = "1.16", default-features = false, features = ["compat-1-2", "std", "renderer-femtovg"] }
smithay-client-toolkit = "0.19"

[build-dependencies]
slint-build = "1.16"
