[package]
name = "gnoblin-launcher"
version = "0.1.0"
edition = "2021"
description = "gnoblin launcher — a Slint wlr-layer-shell app launcher (search + keyboard)"

[[bin]]
name = "gnoblin-launcher"
path = "src/main.rs"

[dependencies]
gnoblin-shell-ui = { path = "../shell-ui" }
slint = { version = "1.16", default-features = false, features = ["compat-1-2", "std", "renderer-femtovg"] }
smithay-client-toolkit = "0.19"

[build-dependencies]
slint-build = "1.16"
