[package]
name = "gnoblin-notifyd"
version = "0.1.0"
edition = "2021"
description = "gnoblin notification daemon — org.freedesktop.Notifications rendered as Slint layer-shell popups"

[[bin]]
name = "gnoblin-notifyd"
path = "src/main.rs"

[dependencies]
gnoblin-shell-ui = { path = "../shell-ui" }
slint = { version = "1.16", default-features = false, features = ["compat-1-2", "std", "renderer-femtovg"] }
smithay-client-toolkit = "0.19"
zbus = "5"
async-io = "2"

[build-dependencies]
slint-build = "1.16"
