[package]
name = "gnoblin-osd"
version = "0.1.0"
edition = "2021"
description = "gnoblin OSD — a Slint volume/brightness on-screen display (one-shot, auto-dismiss)"

[[bin]]
name = "gnoblin-osd"
path = "src/main.rs"

[dependencies]
gnoblin-core = { path = "../crates/gnoblin-core" }
gnoblin-runtime = { path = "../crates/gnoblin-runtime" }
slint = { version = "1.16", default-features = false, features = ["compat-1-2", "std", "renderer-femtovg"] }
smithay-client-toolkit = "0.19"

[build-dependencies]
slint-build = "1.16"
