[package]
name = "gnoblin-power-menu"
version = "0.1.0"
edition = "2021"
description = "gnoblin power menu — a Slint wlr-layer-shell modal with Lock/Log Out/Suspend/Restart/Shut Down"

[[bin]]
name = "gnoblin-power-menu"
path = "src/main.rs"

[dependencies]
gnoblin-core = { path = "../crates/gnoblin-core" }
gnoblin-runtime = { path = "../crates/gnoblin-runtime" }
slint = { version = "1.16", default-features = false, features = ["compat-1-2", "std", "renderer-femtovg"] }
smithay-client-toolkit = "0.19"

[build-dependencies]
slint-build = "1.16"
