[package]
name = "gnoblin-shell-ui"
version = "0.1.0"
edition = "2021"
description = "Shared runtime + Slint UI for gnoblin's shell clients (layer-shell + EGL + FemtoVG, config, dev.gnoblin.Shell, tray, appmenu, client-arg protocol)"

[lib]
name = "gnoblin_shell_ui"
path = "src/lib.rs"

[dependencies]
slint = { version = "1.16", default-features = false, features = ["compat-1-2", "std", "renderer-femtovg"] }
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
wayland-egl = "0.32"
khronos-egl = { version = "6", features = ["static"] }
i-slint-renderer-femtovg = { version = "1.16", features = ["opengl"] }
# Unstable internal API — used ONLY by the GNOBLIN_INSPECT element-tree walker to
# read per-element geometry/role/type. Pinned to the slint version; expect it to
# need a bump whenever slint is upgraded.
i-slint-core = "=1.16.1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
zbus = "5"
async-io = "2"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
