[package]
name = "gnoblin-topbar"
version = "0.1.0"
edition = "2021"
description = "gnoblin top panel — a Slint wlr-layer-shell client (clock, tray, global appmenu)"

[[bin]]
name = "gnoblin-topbar"
path = "src/main.rs"

[dependencies]
gnoblin-core = { path = "../crates/gnoblin-core" }
gnoblin-desktop = { path = "../crates/gnoblin-desktop" }
gnoblin-runtime = { path = "../crates/gnoblin-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = { version = "1.16", default-features = false, features = ["compat-1-2", "std", "renderer-femtovg"] }
smithay-client-toolkit = "0.19"
zbus = "5"

[build-dependencies]
slint-build = "1.16"
