[package]
name = "gnoblin-wallpaper"
version = "0.1.0"
edition = "2021"
description = "gnoblin wallpaper — a wlr-layer-shell SHM client ([appearance] background/wallpaper)"

[[bin]]
name = "gnoblin-wallpaper"
path = "src/main.rs"

[dependencies]
gnoblin-core = { path = "../crates/gnoblin-core" }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
libc = "0.2"
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
